discussion/kv_engine/158414/158414_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47197: Use resource constraints from cbsaslpw.json [3/n]

The current patch removes the file entries used in the prototype
and pick the limits provided in cbsaslpw.json.

NOTE: This patch only replace the existing feature, and does
      NOT update the limits when the user reloads the database

Change-Id: Iffc6df92005caf475b0b89b8e06c3fd87c1380bc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-29 16:15:11.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 16:43:50.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38166/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0068/0157]: set+get+restart+hit (bin)...(68 ms) OK


99% tests passed, 1 tests failed out of 402

Total Test time (real) = 642.07 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38166/ )

Timeout of a CTest test 402/402 Test #251: ep_testsuite.value_eviction.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38166/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10944/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22: error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                     ^~~~~~~~~~~~~~~~
                     servent
/usr/include/netdb.h:255:8: note: "servent" declared here
struct servent
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:40: error: no member named "getUser" in "servent" [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10944/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10944/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32540/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32540/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9610/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/566/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13073/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12537/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11653/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12719/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20620/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/552/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
